# Parallel-AI-Inference

./: .gitignore  CMakeLists.txt  LICENSE
models/TFLite/: mnist_model.tflite
src/: main.cpp
src/core/: InferenceEngine.cpp  InferenceEngine.h  ModelParser.cpp  ModelParser.h  NNActivation.cpp  NNActivation.h  NNLayer.cpp  NNLayer.h  NNModel.h  NNTensor.cpp  NNTensor.h  OutputProcessor.h
src/core/nn/: common.cpp  common.h
src/core/nn/activation/: Activation.cpp  Activation.h  NNActivation.h
src/core/nn/layer/: Activation.cpp  Activation.h  Conv2D.cpp  Conv2D.h  Dense.cpp  Dense.h  Layer.cpp  Layer.h  NNConv2D.cpp  NNConv2D.h  NNDense.cpp  NNDense.h  NNLayer.cpp  NNLayer.h  Relu.cpp  Relu.h
src/core/nn/model/: Model.cpp  Model.h  NNModel.cpp  NNModel.h
src/core/nn/tensor/: NNTensor.cpp  NNTensor.h  Tensor.cpp  Tensor.h  TensorGpuOpenCL.cpp  TensorGpuOpenCL.h  TensorOpenCL.h
src/gpu/: kernels.clh
tests/: test_tensor.cpp
